--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/nnnpooh/blockchain-class-2565-2#readme",
   "dependencies": {
-    "http-server": "^14.1.1"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "serve-index": "^1.9.1"
   }
 }
