--- a/codes/T17 - Hardhat/package.json
+++ b/codes/T17 - Hardhat/package.json
@@ -15,6 +15,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.0",
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.12.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
