--- a/dapps/front/package.json
+++ b/dapps/front/package.json
@@ -9,7 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/next": "^5.10.5",
+    "@mantine/notifications": "^5.10.5",
     "@metamask/providers": "^10.2.1",
+    "@tabler/icons": "^1.118.0",
     "ethers": "^5.7.2",
     "next": "13.1.6",
     "react": "18.2.0",
