--- a/dapps/front/package.json
+++ b/dapps/front/package.json
@@ -21,7 +21,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
