--- a/dapps/front/.env.example
+++ b/dapps/front/.env.example
@@ -9,6 +9,5 @@
 # When adding additional environment variables, the schema in "/env/schema.mjs"
 # should be updated accordingly.
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+NEXT_PUBLIC_ALCHEMY_API_KEY=
+NEXT_PUBLIC_CONTRACT_ADDRESS=
