--- a/dapps/front/.env.example
+++ b/dapps/front/.env.example
@@ -7,7 +7,7 @@
 # ".env" and populate it with your secrets.
 
 # When adding additional environment variables, the schema in "/env/schema.mjs"
-# should be updated accordingly.
+# should be updated accordingly....
 
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_CONTRACT_ADDRESS=
